cmake_minimum_required (VERSION 2.8)
project(epollserver)
SET(CMAKE_CXX_FLAGS ${CMAKE_CXX_FLAGS} "-std=c++11 -lpthread")
#SET(CMAKE_CXX_FLAGS ${CMAKE_CXX_FLAGS} "-std=c++11 -lpthread -lprotobuf")
#include_directories(pb)
#include_directories(pb_helper)
aux_source_directory(src DIR_SRCS_SERVER1)
#aux_source_directory(src DIR_SRCS_SERVER2)
#add_subdirectory(pb)
#add_subdirectory(pb_helper)
add_executable(epollserver ${DIR_SRCS_SERVER1})
#add_executable(epollserver2 ${DIR_SRCS_SERVER2})
#target_link_libraries(epollserver helper pbfile)
SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)
